Create Review model

--- a/.gitignore
+++ b/.gitignore
@@ -1382,3 +1382,39 @@ tmp/cache/bootsnap-compile-cache/ff/c3f5a73ac60615
 tmp/cache/bootsnap-load-path-cache
 tmp/development_secret.txt
 log/development.log
+tmp/cache/bootsnap-compile-cache/00/0cf0f5370b0e8a
+tmp/cache/bootsnap-compile-cache/08/105b089c213065
+tmp/cache/bootsnap-compile-cache/10/37edd78b77b006
+tmp/cache/bootsnap-compile-cache/12/62b4f2e2dfa4ae
+tmp/cache/bootsnap-compile-cache/1b/a12707b2e82681
+tmp/cache/bootsnap-compile-cache/1c/8a2c51b2e576f3
+tmp/cache/bootsnap-compile-cache/1c/9044f3fb53f261
+tmp/cache/bootsnap-compile-cache/20/45757292af40d3
+tmp/cache/bootsnap-compile-cache/23/c264a9c07248de
+tmp/cache/bootsnap-compile-cache/46/e035824a6135d4
+tmp/cache/bootsnap-compile-cache/4e/dd99e973d55db1
+tmp/cache/bootsnap-compile-cache/54/d09a6bf4dc7aa4
+tmp/cache/bootsnap-compile-cache/55/3672a32f8573b6
+tmp/cache/bootsnap-compile-cache/59/85ceb659b10a56
+tmp/cache/bootsnap-compile-cache/5f/675936e2d1459f
+tmp/cache/bootsnap-compile-cache/66/228ac2d06e19a8
+tmp/cache/bootsnap-compile-cache/69/87562f35f9e181
+tmp/cache/bootsnap-compile-cache/70/120212766d39d2
+tmp/cache/bootsnap-compile-cache/7d/7c555ad4903b97
+tmp/cache/bootsnap-compile-cache/ad/c255a4d085a666
+tmp/cache/bootsnap-compile-cache/b1/3fb8a5b52063c5
+tmp/cache/bootsnap-compile-cache/c1/544dc3e42796a4
+tmp/cache/bootsnap-compile-cache/c3/d3b82b10925514
+tmp/cache/bootsnap-compile-cache/c9/c451676a9729a4
+tmp/cache/bootsnap-compile-cache/d2/176701da3bd78d
+tmp/cache/bootsnap-compile-cache/d2/8fd74ac26e8872
+tmp/cache/bootsnap-compile-cache/d8/4b778719e742c3
+tmp/cache/bootsnap-compile-cache/e1/d33f31371640ae
+tmp/cache/bootsnap-compile-cache/ed/1eabbe681ff1ab
+tmp/cache/bootsnap-compile-cache/f2/a689221084409c
+tmp/cache/bootsnap-compile-cache/f3/c3f93f2c89e9e0
+tmp/cache/bootsnap-compile-cache/f8/cd42b29df919bc
+tmp/cache/bootsnap-compile-cache/fe/06c6c1033a9a34
+*.sqlite3
+*.sqlite3
+db/development.sqlite3
