Create reviews controller

--- a/.gitignore
+++ b/.gitignore
@@ -1426,3 +1426,122 @@ tmp/cache/bootsnap-compile-cache/e5/bde4e5ac206787
 db/development.sqlite3
 tmp/cache/bootsnap-compile-cache/ba/ce576d10244c52
 db/development.sqlite3
+tmp/cache/bootsnap-compile-cache/11/04b5911315bfb6
+tmp/cache/bootsnap-compile-cache/43/16867ada97fb5a
+tmp/cache/bootsnap-compile-cache/4b/6aadc5f5096396
+tmp/cache/bootsnap-compile-cache/51/c6fcdc11b33c04
+tmp/cache/bootsnap-compile-cache/7e/546ae44d0a5a52
+tmp/cache/bootsnap-compile-cache/ce/3cd1b1e75015d2
+tmp/cache/bootsnap-compile-cache/d6/3b028a656df814
+tmp/cache/bootsnap-compile-cache/de/03aa90d1b3ef46
+tmp/cache/bootsnap-compile-cache/ff/3c9e9ba2de43d6
+*.pid
+tmp/cache/bootsnap-compile-cache/00/9c5818ab3db2e3
+tmp/cache/bootsnap-compile-cache/01/aca8472abd6433
+tmp/cache/bootsnap-compile-cache/03/4812fa7f38c157
+tmp/cache/bootsnap-compile-cache/06/ca028d71af4a99
+tmp/cache/bootsnap-compile-cache/07/567e2ab69e8fc4
+tmp/cache/bootsnap-compile-cache/17/c32ea1e4c3eefa
+tmp/cache/bootsnap-compile-cache/19/0717855ee52e6e
+tmp/cache/bootsnap-compile-cache/1b/b0f6fb12beeea8
+tmp/cache/bootsnap-compile-cache/1b/ea6cfa77e831da
+tmp/cache/bootsnap-compile-cache/1c/030833bde3f31b
+tmp/cache/bootsnap-compile-cache/1c/7bcc74b09ca6e0
+tmp/cache/bootsnap-compile-cache/1c/ed82c1fbffebc4
+tmp/cache/bootsnap-compile-cache/1d/c1036c3314ff0b
+tmp/cache/bootsnap-compile-cache/1f/a57c04bc68b499
+tmp/cache/bootsnap-compile-cache/20/e6058b85a3b0b8
+tmp/cache/bootsnap-compile-cache/23/95cec1d5d1b1b6
+tmp/cache/bootsnap-compile-cache/23/bf2538a61ad995
+tmp/cache/bootsnap-compile-cache/25/6ef79b3a5ad1e9
+tmp/cache/bootsnap-compile-cache/28/3a6270efb6309c
+tmp/cache/bootsnap-compile-cache/28/50b078d5759f6b
+tmp/cache/bootsnap-compile-cache/28/f58583d8bde6b5
+tmp/cache/bootsnap-compile-cache/2c/fcd7a1991564c0
+tmp/cache/bootsnap-compile-cache/2d/d8f7dbe27ff9f5
+tmp/cache/bootsnap-compile-cache/2f/04b08b92a58879
+tmp/cache/bootsnap-compile-cache/2f/58f265945f6142
+tmp/cache/bootsnap-compile-cache/38/ef418a391c46b3
+tmp/cache/bootsnap-compile-cache/3c/536e1051fdd3c5
+tmp/cache/bootsnap-compile-cache/3e/e26d47d400b8b6
+tmp/cache/bootsnap-compile-cache/3f/f019ccc542620f
+tmp/cache/bootsnap-compile-cache/41/bb1deb168612e2
+tmp/cache/bootsnap-compile-cache/45/da45623f82fa8d
+tmp/cache/bootsnap-compile-cache/52/b74ce736bb6904
+tmp/cache/bootsnap-compile-cache/53/3b559f34dc580c
+tmp/cache/bootsnap-compile-cache/53/4f75ccb58e7c5c
+tmp/cache/bootsnap-compile-cache/54/fa20b71e8cb5d3
+tmp/cache/bootsnap-compile-cache/55/d98f10bc35af6a
+tmp/cache/bootsnap-compile-cache/56/1595603fed018c
+tmp/cache/bootsnap-compile-cache/57/9d19d8a77dec5c
+tmp/cache/bootsnap-compile-cache/58/4944ad772ea2e2
+tmp/cache/bootsnap-compile-cache/59/0a93eddb8c8995
+tmp/cache/bootsnap-compile-cache/5d/dfcc3c90149d7c
+tmp/cache/bootsnap-compile-cache/64/1d2729d9625128
+tmp/cache/bootsnap-compile-cache/6a/95281f2a622ee6
+tmp/cache/bootsnap-compile-cache/6a/b6bb99884b185e
+tmp/cache/bootsnap-compile-cache/70/210ecf10637695
+tmp/cache/bootsnap-compile-cache/70/ff98e0dd8ac5c8
+tmp/cache/bootsnap-compile-cache/71/114e5604cdfea3
+tmp/cache/bootsnap-compile-cache/72/5635bdc7dead12
+tmp/cache/bootsnap-compile-cache/73/63a2ac25030b94
+tmp/cache/bootsnap-compile-cache/77/c6cdcabf35483f
+tmp/cache/bootsnap-compile-cache/79/71b259adf5071e
+tmp/cache/bootsnap-compile-cache/7c/69b25008574374
+tmp/cache/bootsnap-compile-cache/7c/71871689a41b7b
+tmp/cache/bootsnap-compile-cache/7d/7e5fa58c94674b
+tmp/cache/bootsnap-compile-cache/7e/54d52f97397b90
+tmp/cache/bootsnap-compile-cache/80/8cb6ad60ad76f7
+tmp/cache/bootsnap-compile-cache/81/1a704fbf5d5c10
+tmp/cache/bootsnap-compile-cache/83/a80e15fe096eab
+tmp/cache/bootsnap-compile-cache/83/f6b2a3dd5e28c9
+tmp/cache/bootsnap-compile-cache/87/85b3ef6c421c7c
+tmp/cache/bootsnap-compile-cache/88/a78db814f003ef
+tmp/cache/bootsnap-compile-cache/88/d61d54c7a96926
+tmp/cache/bootsnap-compile-cache/89/33dab9e3583acf
+tmp/cache/bootsnap-compile-cache/8b/6788ff76d2d09e
+tmp/cache/bootsnap-compile-cache/8b/b7df2f0109e8be
+tmp/cache/bootsnap-compile-cache/90/601410d45bd05a
+tmp/cache/bootsnap-compile-cache/92/7330daf23eeb42
+tmp/cache/bootsnap-compile-cache/96/53f8ee3a38d131
+tmp/cache/bootsnap-compile-cache/97/e2918a3f77a778
+tmp/cache/bootsnap-compile-cache/98/9d9405ffd3f8c1
+tmp/cache/bootsnap-compile-cache/9a/cb2d44159dad0e
+tmp/cache/bootsnap-compile-cache/9b/fd228ca42bb290
+tmp/cache/bootsnap-compile-cache/a1/610e5a7d755c3f
+tmp/cache/bootsnap-compile-cache/a1/a201fd1e41b725
+tmp/cache/bootsnap-compile-cache/a2/1287b549f83816
+tmp/cache/bootsnap-compile-cache/a2/3c04853ea70499
+tmp/cache/bootsnap-compile-cache/a3/0384b53b2cdb41
+tmp/cache/bootsnap-compile-cache/a3/3cc6a84eb11ee4
+tmp/cache/bootsnap-compile-cache/a9/25a848e79fe8f3
+tmp/cache/bootsnap-compile-cache/aa/4b4d8be1cfd21c
+tmp/cache/bootsnap-compile-cache/ab/f5b71bf6e62ddd
+tmp/cache/bootsnap-compile-cache/ad/25cbb869c56c0e
+tmp/cache/bootsnap-compile-cache/b3/4cd0d0b71b987d
+tmp/cache/bootsnap-compile-cache/ba/a5647044f0e123
+tmp/cache/bootsnap-compile-cache/bb/09e4dd6c140a7d
+tmp/cache/bootsnap-compile-cache/c1/dc783a88d8e754
+tmp/cache/bootsnap-compile-cache/c8/05307b09be666a
+tmp/cache/bootsnap-compile-cache/c8/5e44f15e359a36
+tmp/cache/bootsnap-compile-cache/ca/c93e0a8dd056a3
+tmp/cache/bootsnap-compile-cache/cb/45c39deb562e35
+tmp/cache/bootsnap-compile-cache/cc/74ce6788932d36
+tmp/cache/bootsnap-compile-cache/cc/d92a009a618551
+tmp/cache/bootsnap-compile-cache/d0/be2c985538a619
+tmp/cache/bootsnap-compile-cache/d3/f152648095d100
+tmp/cache/bootsnap-compile-cache/d7/2a72efd303d0e8
+tmp/cache/bootsnap-compile-cache/d8/0a0ba2f827d0ed
+tmp/cache/bootsnap-compile-cache/d8/1cea2675f76f23
+tmp/cache/bootsnap-compile-cache/e1/297044bbd93a39
+tmp/cache/bootsnap-compile-cache/e1/bbec8cd745204b
+tmp/cache/bootsnap-compile-cache/e7/e36b4a59060b3c
+tmp/cache/bootsnap-compile-cache/ea/b0bf3836d74f05
+tmp/cache/bootsnap-compile-cache/f0/27bf299a0d45b9
+tmp/cache/bootsnap-compile-cache/fa/a70865152a2245
+tmp/cache/bootsnap-compile-cache/fc/753af8a37d0b08
+tmp/cache/bootsnap-compile-cache/fd/1130aa55d72d54
+tmp/restart.txt
+tmp/cache/bootsnap-compile-cache/d8/ae396b77b7f145
+tmp/cache/bootsnap-compile-cache/5a/d67a5e330f4c0a
+test/controllers/reviews_controller_test.rb
