Hook up the create review form for users

--- a/.gitignore
+++ b/.gitignore
@@ -1545,3 +1545,85 @@ tmp/restart.txt
 tmp/cache/bootsnap-compile-cache/d8/ae396b77b7f145
 tmp/cache/bootsnap-compile-cache/5a/d67a5e330f4c0a
 test/controllers/reviews_controller_test.rb
+tmp/cache/assets/sprockets/v3.0/-Z/-Znl5glOLjNwOT6R0i1oOPB4kjZ_c0hNtagQH303c3E.cache
+tmp/cache/assets/sprockets/v3.0/0K/0Kkc0ciowrcc6bY1YbaiYHtXYyuDl_pk79Jl3PMCXNA.cache
+tmp/cache/assets/sprockets/v3.0/0v/0vvzGEykIvIb83KcRI0eGBSAuJxJP1RkUL7H_kilvcg.cache
+tmp/cache/assets/sprockets/v3.0/0x/0xrHesVJPj1hH2RQyUIMq28WhLWr3wjc6zmyvSs4tEA.cache
+tmp/cache/assets/sprockets/v3.0/16/164nN5VWw5KlEig8m55o5F_SV4ahuACW31x71wp_-GM.cache
+tmp/cache/assets/sprockets/v3.0/1I/1IzyStSdJk6HAwXJJeAOk57H7zNeIg5dWqAXW0zuh38.cache
+tmp/cache/assets/sprockets/v3.0/2R/2RN4bDE5Wo9DMeSKwIQTrWfZdBxGo_Vf7AOKQiPRGCE.cache
+tmp/cache/assets/sprockets/v3.0/2W/2WXf3w9IQXu1bHdgbOrquvyggs8kNynvnIf4Af1bYUA.cache
+tmp/cache/assets/sprockets/v3.0/3e/3et7IniAybXbngVz4L5PzL9UnUFgPpfTgEfeWvMv6Nw.cache
+tmp/cache/assets/sprockets/v3.0/3Y/3YqXZDsfHBMZ-oJwH5z6FyJnPN6jF3yl0hYi2P2yI7Q.cache
+tmp/cache/assets/sprockets/v3.0/42/42TAwc6oI2h0xkmoWlHKZkmY-GgdlpNqJD_UN_gdLcw.cache
+tmp/cache/assets/sprockets/v3.0/61/61DYE6KWkT0kZHOqhoDyZVE-tFnswqDzUluEf04Z9qI.cache
+tmp/cache/assets/sprockets/v3.0/6y/6yB9Q1SE5jy3YjyS4dUWCMW-8mHaAmu84abNgWoPG_A.cache
+tmp/cache/assets/sprockets/v3.0/7z/7zQtmj2PYCcNP-rjPJKP-OhOHvaKDLF0_qIEROJ_6Zw.cache
+tmp/cache/assets/sprockets/v3.0/8G/8GAgQII9ZvcN47-wTQoP5F1D_EVyzdMK4yXjvrY3rNA.cache
+tmp/cache/assets/sprockets/v3.0/8J/8JscBJvWLquOzt0baLnlGuk1AOxWblDNdP7xzO63hUg.cache
+tmp/cache/assets/sprockets/v3.0/99/99m8UCKl4j8IpsVOK8ltLHyNh8Ae0nHw3GBkC34V_co.cache
+tmp/cache/assets/sprockets/v3.0/9S/9SlurH7bWNC-lssYMeNwxkZr1cqVy686kx3yinlDD6U.cache
+tmp/cache/assets/sprockets/v3.0/_y/_y65CoRN-CByRppRLmAvfPjIeFJRwHbEEYZkXmg4Y-4.cache
+tmp/cache/assets/sprockets/v3.0/B-/B-_tPBhi9tdA29opBYAE7biG6cGciglwEpWOEu7vk8s.cache
+tmp/cache/assets/sprockets/v3.0/B4/B43LeT9Wba4fLvXw-C_kKq-x9HwYZxnBBiltbIufzzQ.cache
+tmp/cache/assets/sprockets/v3.0/bE/bEPSV9MxVATP6nCDx9Yr5xU8gX0e3XQ7VFRjHoh3kus.cache
+tmp/cache/assets/sprockets/v3.0/BY/BYw1w9eke16S_ToBW_tv1Ejd5SW-kkAPMeVqR6Gnb4A.cache
+tmp/cache/assets/sprockets/v3.0/Cb/CbVB3myb2BWEsYGKwDSm5ZvWj2cUFnmGYNJRuSFuxkU.cache
+tmp/cache/assets/sprockets/v3.0/CJ/CJsgpb8XdAltPBZM83vsmDyGkWt_-TNeqmBMU1yF4ZQ.cache
+tmp/cache/assets/sprockets/v3.0/cm/cmkFP0C4XkVZxVtw79KxpK20UoDgvBFXduYAo-kvju0.cache
+tmp/cache/assets/sprockets/v3.0/cq/cq2GWxwWo32XcyXJ2Td_L2ifb9-tGO4jVbjHRVsJ_dc.cache
+tmp/cache/assets/sprockets/v3.0/e1/e1UtxDJ0vs5iaL3kWJ2Whyjn9s1kqVMsfd5sAYDLgvI.cache
+tmp/cache/assets/sprockets/v3.0/G7/G7Mk8Rwk3hE52kZ2mxXpP4N55bM4obDM3Xi1l-DxZH0.cache
+tmp/cache/assets/sprockets/v3.0/h6/h6sj3SUpgk2UPfPLA9n7Eq67ab-T9sHdJWURZ05Klws.cache
+tmp/cache/assets/sprockets/v3.0/hB/hBCcPNW-f4nS__ukzKYahZsnjjAbEOtkw9Skq-6ed0w.cache
+tmp/cache/assets/sprockets/v3.0/HC/HCDOUd7-S45aJ_PjVAC_Vmjyud3i1aQv4cE3t9_Z3Dw.cache
+tmp/cache/assets/sprockets/v3.0/I3/I3XbDVRxhOHrOdNvcvUFRjGLt1osKAvV7NRrTJZljSg.cache
+tmp/cache/assets/sprockets/v3.0/Ih/IhP9GavTBS-lciQ-49Ik-wrjg8z6JnaKd80L4reXrFw.cache
+tmp/cache/assets/sprockets/v3.0/KH/KH417_hqYFqpoSwSpU7M734sDVVh7rwKPwbH4Yp7b_U.cache
+tmp/cache/assets/sprockets/v3.0/Lm/Lmax_Y-k5U2Bk7HNO05XocauLwtnpKgJI_WX-Tek0II.cache
+tmp/cache/assets/sprockets/v3.0/lr/lrt0uYyg6weQ2sHiHJP4FhVQNH4fzqcGHgtv7fcKeXU.cache
+tmp/cache/assets/sprockets/v3.0/Ly/Ly_oz_KArcSpoZXUqq8pB57T-5g_N9PNDGv0dbNCY3s.cache
+tmp/cache/assets/sprockets/v3.0/m8/m8RV6Jib53pxfhAQaiTgUFJpfYn-raiX_ujaG-cnyP0.cache
+tmp/cache/assets/sprockets/v3.0/MQ/MQvu2WkmK5fiPmiWWh9vFx8c8KO06YdiLMC4NJfnyI4.cache
+tmp/cache/assets/sprockets/v3.0/NQ/NQuhvI_55qLW21SQw44ZL6NZoge4nPNTwseIKbBtnfQ.cache
+tmp/cache/assets/sprockets/v3.0/nU/nUmEniK1qjDXmacLEfkRCNq464kmPHLoZx302GrhnzM.cache
+tmp/cache/assets/sprockets/v3.0/O3/O3V2owCjOU6_XOCELKgpwWDh1nzop9mTm9V-dU08l3k.cache
+tmp/cache/assets/sprockets/v3.0/oM/oMB1Iwx_3AuOC62AU05Cdp1WVY_LedwFrMZMO6znsCk.cache
+tmp/cache/assets/sprockets/v3.0/pC/pCSkNP6YufQwjcqkCwUvX22kPCsgqmFkWsM8rgDqe7M.cache
+tmp/cache/assets/sprockets/v3.0/Ph/PhGeFDlZLGbOKp-gUZuXaULwnv6LlaQR4Z4my5yFVQg.cache
+tmp/cache/assets/sprockets/v3.0/QA/QAX_B0TyJPM1AFGlH8Lle1SmXr8N6FUKjv4SMa6hYcc.cache
+tmp/cache/assets/sprockets/v3.0/qf/qfALMrIoxfPSrk8epArXiVI6AkUMN-tQ7rxmcyORdcE.cache
+tmp/cache/assets/sprockets/v3.0/QP/QPTRwk5Kk9tuGUOKUkY2f59Kr3_VavCXuopCRjiFpvo.cache
+tmp/cache/assets/sprockets/v3.0/qw/qwGqwAwcNMIRv80VQrgU9Sm6S2ulkmcn0KVZhyxRqso.cache
+tmp/cache/assets/sprockets/v3.0/Qy/QyYpAhWLwTYxrSqaOP0R2j5XALe7SLCma8mFM_t9nAU.cache
+tmp/cache/assets/sprockets/v3.0/Rk/RkQLRXSz5LhJQnH7BT-ZDkVK0Rx8N9KhcVwR2A1HY4M.cache
+tmp/cache/assets/sprockets/v3.0/SZ/SZDfdmythIDaDsB2UDLEy4FQpI2zPtIJ5lyDbInW7fc.cache
+tmp/cache/assets/sprockets/v3.0/Tg/Tg5VDq-NXxc25o-tI4HqyW1t2hvJt4wWJifc6hgi6tA.cache
+tmp/cache/assets/sprockets/v3.0/U3/U35wUHOdBgdaAmJYzGXmNhx23bbed3sSfMk9zfuUILo.cache
+tmp/cache/assets/sprockets/v3.0/vc/vcgiILg1wO98x-a4kX678ASAFWA1cL0iVx07VkHLPqA.cache
+tmp/cache/assets/sprockets/v3.0/VJ/VJ2I3vJ45wpiEoQVf6RH-3kY8lcIVsyibYC1M-WGvsU.cache
+tmp/cache/assets/sprockets/v3.0/vw/vwJmKiFaD94YIvvzS4eWMpIzADO8BtZo9DjMPhshnRM.cache
+tmp/cache/assets/sprockets/v3.0/Wi/Wi-jNNHOg8YYfShpKUjnIQ9SHYHCbf0xclwsDqo76VA.cache
+tmp/cache/assets/sprockets/v3.0/Xa/XaMdwwwAGkzkFm_rtcvgEI_pZ0k_Q1UmjAJQMAZYrfI.cache
+tmp/cache/assets/sprockets/v3.0/Xu/Xu0rGfPM2SI5V6D6TwTS-mI7SFajxxYfQ8Du_GWvQeg.cache
+tmp/cache/assets/sprockets/v3.0/xX/xXxQLAvcDvKQsyyMkQIfsdKGyl33g3e6XzqRZppQ1u0.cache
+tmp/cache/assets/sprockets/v3.0/yJ/yJeOgO5ARQcbOTwZZqESiugkFhmOOE6z7g6C5lFMJgE.cache
+tmp/cache/assets/sprockets/v3.0/yK/yKGtkkdTnY41i0dvKv0FQQnmsUUhohply8PvjxzLXzw.cache
+tmp/cache/assets/sprockets/v3.0/Yt/YtqCHJyao2s6lS4zG0QB_W7y9bGWZeMvbfJuIpMtv1Q.cache
+tmp/cache/assets/sprockets/v3.0/yw/ywp9Bj5aIimENTsDIP_A7J86MaWuf4bfJTvbiP7s5UA.cache
+tmp/cache/assets/sprockets/v3.0/YX/YX15t7NTRP8vCV9_9JgIcKPs-AYf1fh1S5OyAgE5tak.cache
+tmp/cache/assets/sprockets/v3.0/ZO/ZOs0OvTO_h3UPNmZwD8gI32_-Q4WNeykY0l2iUBIKwQ.cache
+tmp/cache/assets/sprockets/v3.0/Zv/ZvCEW2ZyS-k4cHH7Gd8P2nKFE9Uh1VOrfR-1PYY2yz8.cache
+tmp/cache/bootsnap-compile-cache/97/59601552375a78
+tmp/cache/bootsnap-compile-cache/0d/5001ce7b964c1b
+tmp/cache/bootsnap-compile-cache/3c/22700584d5fcc2
+tmp/cache/bootsnap-compile-cache/49/a057476de049fc
+tmp/cache/bootsnap-compile-cache/4a/eafef81fa6a59b
+tmp/cache/bootsnap-compile-cache/65/eac74e2fd437fa
+tmp/cache/bootsnap-compile-cache/97/78705c3e80a50d
+tmp/cache/bootsnap-compile-cache/a3/71cb97237b997c
+tmp/cache/bootsnap-compile-cache/bf/af5c0816da5f6f
+tmp/cache/bootsnap-compile-cache/cc/ea0ac71c372535
+tmp/cache/bootsnap-compile-cache/d7/5b14c2713b8751
+tmp/cache/bootsnap-compile-cache/e5/e198ae49f3fe8d
+tmp/cache/bootsnap-compile-cache/f1/699ba1919f7581
